# simple_gpu_server_management

./: pyproject.toml
app/: __init__.py  code.py  forms.py  models.py  routes.py  tasks.py  utils.py
app/templates/: dashboard.html  server_detail.html  server_management.html
